CVS HEAD:
 * user interface improvements:
   * added hotkey for cycle to previous unit (shift-N) (part of #10703)
   * added hotkey for hold position (shift-space) (patch 3994)
   * made the right Command key on Mac OS X work like the left one
   * made menu widgets sortable
   * added %-to-kill to Damage Calculations
   * added display of unit defense over the terrain when choosing move
   * added visual cue for movement in specific terrain when choosing move
   * added 'Advanced' preferences: 'binary save files', 'show combat'
   * made network dialogs show progress of data transfers again
   * sped up help
   * fixed female units not appearing in help (broken since 0.9.0)
   * reduced required width of weapon area in help
   * fixed items appearing in traits description (#12603)
   * preserve trait ordering to distinguish quick,resilient and resilient,quick
   * improved layout of objectives dialog
   * made the text of disabled buttons grayed out
   * made room for observers in DFool theme
   * added clock to DFool theme (#10650)
   * tweaked multiplayer lobby
   * better checking for 'control' command arguments (#13086)
   * added support for unit portraits in help (forum thread 6017)
   * added Experimental theme
   * typing a chat message quickly no longer lags the game (#12097)
   * pasting multiline text now discards lines after the first (#12282)
 * campaign improvements:
   * Eastern Invasion:
     * Unexpected Appearance: fixed Dacyn not being [recall]-ed (#10619)
     * Northern Outpost: killing enemies in "wrong" order is now a win (#12922)
     * Northern Outpost: added a Holy Water bottle
     * Captured: fixed several bugs (#10512), but replaced scenario anyway
     * Drowned Plains: new map and scenario modification, bug fixed (#13013)
   * Heir to the Throne:
     * Siege of Elensefar: fixed thieves not appearing (forum thread 5719)
   * Son of the Black Eye:
     * prevented the shamans from being recallable (#11932)